config-proxy/routing-ingress.yml
#@ load("@ytt:data", "data")

---
#!apiVersion: projectcontour.io/v1
#!kind: HTTPProxy
#!  metadata:
#!    name: tap-gui
#!    namespace: tap-gui
#!spec:
#!  virtualhost:
#!    fqdn: #@ "tap-gui.{}".format(data.values.domain)
#!    tls:
#!      secretName: #@ "{}/{}".format(data.values.tls.namespace,data.values.tls.secretName)
#!  routes:
#!    - services:
#!       - name: server
#!          port: 7000
#!
#!---
#!apiVersion: projectcontour.io/v1
#!kind: HTTPProxy
#!metadata:
#!  name: app-live-view
#!  namespace: app-live-view
#!  annotations:
#!    kapp.k14s.io/change-rule: "upsert after upserting tap-install/tap"
#!spec:
#!  virtualhost:
#!    fqdn: #@ "app-live-view.{}".format(data.values.domain)
#!    tls:
#!      secretName: #@ "{}/{}".format(data.values.tls.namespace,data.values.tls.secretName)
#!  routes:
#!    - services:
#!        - name: application-live-view-5112
#!          port: 80

#!---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: accelerator
  namespace: accelerator-system
  annotations:
    kapp.k14s.io/change-rule: "upsert after upserting tap-install/tap"
spec:
  virtualhost:
    fqdn: #@ "accelerator.{}".format(data.values.domain)
    tls:
      secretName: #@ "{}/{}".format(data.values.tls.namespace,data.values.tls.secretName)
  routes:
    - services:
        - name: acc-server
          port: 80

---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  annotations:
    projectcontour.io/ingress.class: contour-external
    kapp.k14s.io/change-rule: "upsert after upserting tap-install/tap"
  labels:
    projectcontour.io/ingress.class: contour-external
  name: api-portal-external
  namespace: api-portal
spec:
  routes:
    - conditions:
        - prefix: /
      services:
        - name: api-portal-server
          port: 8080
  virtualhost:
    fqdn: #@ "api-portal.{}".format(data.values.domain)
    tls:
      secretName: #@ "{}/{}".format(data.values.tls.namespace,data.values.tls.secretName)

---
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: learningcenter
  namespace: learning-center-guided-ui
  annotations:
    kapp.k14s.io/change-rule: "upsert after upserting tap-install/tap"
spec:
  virtualhost:
    fqdn: #@ "learningcenter.{}".format(data.values.domain)
    tls:
      secretName: #@ "{}/{}".format(data.values.tls.namespace,data.values.tls.secretName)
  routes:
    - services:
        - name: learningcenter-portal
          port: 8080

---
